<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_action_description"
            android:title="@string/menu_configuration" />

        <item
            android:id="@+id/nav_app_proxy"
            android:icon="@drawable/ic_baseline_vpn_key_24"
            android:title="@string/vpn_mode" />

        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_maps_directions"
            android:title="@string/menu_route" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logcat"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/baseline_construction_24"
            android:title="@string/backup" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>

</menu>
