<?xml version="1.0" encoding="utf-8"?><!-- Based on: https://github.com/android/platform_frameworks_base/blob/505e3ab/core/res/res/layout/simple_list_item_2.xml -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/tv_card_margin"
    android:minHeight="@dimen/tv_card_min_height"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:nextFocusRight="@+id/edit"
    app:cardElevation="2dp"
    app:strokeColor="@color/tv_card_stroke"
    app:strokeWidth="@dimen/tv_card_stroke_width">

    <LinearLayout
        android:id="@+id/content_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/selected_view"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="?selectedColorPrimary"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusRight="@+id/edit"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/tv_profile_name_text_size"
                        android:textStyle="bold"
                        tools:text="@string/profile_name" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/edit"
                    android:layout_width="@dimen/tv_icon_touch_size"
                    android:layout_height="@dimen/tv_icon_touch_size"
                    android:layout_gravity="top"
                    android:background="@drawable/tv_icon_button_background"
                    android:contentDescription="@string/edit"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/content"
                    android:padding="@dimen/tv_icon_padding"
                    app:srcCompat="@drawable/ic_image_edit" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/move"
                    android:layout_width="@dimen/tv_icon_touch_size"
                    android:layout_height="@dimen/tv_icon_touch_size"
                    android:layout_gravity="top"
                    android:background="@drawable/tv_icon_button_background"
                    android:contentDescription="@string/move"
                    android:focusable="true"
                    android:padding="@dimen/tv_icon_padding"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_baseline_compare_arrows_24" />

                <LinearLayout
                    android:id="@+id/share"
                    android:layout_width="@dimen/tv_icon_touch_size"
                    android:layout_height="@dimen/tv_icon_touch_size"
                    android:layout_gravity="top"
                    android:background="@drawable/tv_icon_button_background"
                    android:contentDescription="@string/share"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/content">

                    <LinearLayout
                        android:id="@+id/share_layer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/tv_icon_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/shareIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_social_share" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/remove"
                    android:layout_width="@dimen/tv_icon_touch_size"
                    android:layout_height="@dimen/tv_icon_touch_size"
                    android:layout_gravity="top"
                    android:background="@drawable/tv_icon_button_background"
                    android:contentDescription="@string/delete"
                    android:focusable="true"
                    android:padding="@dimen/tv_icon_padding"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_action_delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/profile_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_address"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/tv_secondary_text_size" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/traffic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/traffic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/tv_secondary_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/profile_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/accentOrTextSecondary"
                    android:textSize="@dimen/tv_secondary_text_size" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/profile_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/accentOrTextSecondary"
                    android:textSize="@dimen/tv_secondary_text_size" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
